--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -1,3 +1,16 @@
 body {
     background-color: black;
+    height: 100vh;
+}
+
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-width: 1366px) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {   
+
+    .col-ipad-pro {
+        min-width: 70%;
+    }
+
+    
 }
