--- a/css/sidebarstyle.css
+++ b/css/sidebarstyle.css
@@ -32,5 +32,12 @@
         padding: 0;
     }
 
+    .h100{
+        height: 100vh;
+    }
+
+    .dark {
+        background-color: rgba(18,18,18);
+    }
 }
 
